2004-05-20  Andreas Kupries  <andreask@activestate.com>

	* generic/fifo2.c:   Gave all drivers a BlockMode proc.
	* generic/fifo.c:    This proc will reject all attempts
	* generic/memchan.c: to set -blocking 1. But the main
	* generic/null.c:    purpose is to ensure that the
	                     Tcl IO core does not believe that is
			     has to do non-blocking on its own.

2004-02-18  Andreas Kupries  <andreask@activestate.com>

	* DESCRIPTION.txt: Updated to dinstinguish CVS from release.
	* generic/fifo.c (Input):    Fixed bug in reporting when at
	* generic/memchan.c (Input): the end of the buffer. Has to
	                             be 0/no-error, not -1/wouldblock.

2003-05-15  Andreas Kupries  <andreask@activestate.com>

	* generic/memchanInt.h: forcing usage of 'sprintf' for the
	  generation of the channel name across all platforms
	  now. Encountered an HP lto with a different signature than we
	  use here, causing the code to get what is essentially on the
	  stack as handle suffix, completely bogus.

2003-04-04  Andreas Kupries  <andreask@activestate.com>

	* configure.in:
	* tclconfig/tcl.m4: Updated to newest tcl.m4, regenerated
	  configure's.

2003-02-04  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* generic/memchan.c (Seek): Fixed bug 556819. Interpretation of
	  the sign of the seek offset was wrong for seek mode SEEK_END.

2003-01-24  Andreas Kupries  <andreask@activestate.com>

	* Makefile.in:        Providing information about tclsh and its
	                      environment to nroff_gen.
	* tools/mpexpand.tcl: Copied from tcllib, portable doctools
	                      processing.
	* tools/nroff_gen:    Use mpexpand.tcl, use provided tclsh to
	                      invoke it.

2003-01-20  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tools/mpexpand: Added new tool. Linux/ix86 starpack containing a
	  doctools processor.

	* tools/nroff_regen:             Rewritten to use mpexpand for most